--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "main": "node ./bin/www",
+  "main": "./bin/www",
   "dependencies": {
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
