--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thumbs",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -14,6 +14,6 @@
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "zip": ""
+    "zip": "~1.2.0"
   }
 }
